fixed overflow

--- a/src/index.css
+++ b/src/index.css
@@ -44,9 +44,10 @@
     );
   }
   .singleline {
-    white-space: nowrap;
+    display: -webkit-box;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
     overflow: hidden;
-    text-overflow: ellipsis;
   }
   .multiline {
     display: -webkit-box;
